# tui-torrent

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
src/: app.rs  aria2_client.rs  aria2_manager.rs  ascii_art.rs  error.rs  lib.rs  main.rs  storage.rs  torrent_search.rs  tui.rs  types.rs  utils.rs
src/api/: mod.rs  piratebay.rs  x1337.rs  yts.rs
tests/: app_tests.rs  storage_tests.rs  utils_tests.rs
