[package]
name = "tui-torrent"
version = "0.1.0"
edition = "2024"
default-run = "tui-torrent"
license = "MIT"
description = "A terminal user interface for managing torrents."
readme = "README.md"

[[bin]]
name = "tui-torrent"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.18"
url = "2.4"
regex = "1.10"
urlencoding = "2.1"
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
